Never print to stdout, always use stderr
This makes it possible to use deepface in programs that use stdout for
other usages. For example I use it in a streaming pipeline that outputs
the represent results on stdout.

--- a/tests/Fine-Tuning-Threshold.ipynb
+++ b/tests/Fine-Tuning-Threshold.ipynb
@@ -257,16 +257,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using VGG-Face model backend and cosine distance.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Using VGG-Face model backend and cosine distance.\n",
       "Verification: 100%|██████████| 300/300 [11:35<00:00,  2.32s/it]\n"
      ]
     }
