brute force search added

--- a/tests/unit/db.ipynb
+++ b/tests/unit/db.ipynb
@@ -52,6 +52,223 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73685f75",
+   "metadata": {},
+   "source": [
+    "## Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7de3420f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs = DeepFace.search(\n",
+    "    img=\"../integration/dataset/target.jpg\",\n",
+    "    model_name=\"Facenet\",\n",
+    "    detector_backend=\"mtcnn\",\n",
+    "    connection=conn,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "91c8d192",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dfs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "53ef7336",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 7)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "68802ce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>img_name</th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>detector_backend</th>\n",
+       "      <th>aligned</th>\n",
+       "      <th>l2_normalized</th>\n",
+       "      <th>distance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>162</td>\n",
+       "      <td>dataset/img7.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.157526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>139</td>\n",
+       "      <td>dataset/selfie-many-people.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.199807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>167</td>\n",
+       "      <td>dataset/img2.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.203507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>157</td>\n",
+       "      <td>dataset/img5.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.207596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>161</td>\n",
+       "      <td>dataset/img6.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.211547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>106</td>\n",
+       "      <td>../unit/dataset/img1.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.236827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>137</td>\n",
+       "      <td>dataset/img11_reflection.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.244111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>158</td>\n",
+       "      <td>dataset/img4.jpg</td>\n",
+       "      <td>Facenet</td>\n",
+       "      <td>mtcnn</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.248995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                        img_name model_name detector_backend  aligned  \\\n",
+       "54  162                dataset/img7.jpg    Facenet            mtcnn     True   \n",
+       "31  139  dataset/selfie-many-people.jpg    Facenet            mtcnn     True   \n",
+       "59  167                dataset/img2.jpg    Facenet            mtcnn     True   \n",
+       "49  157                dataset/img5.jpg    Facenet            mtcnn     True   \n",
+       "53  161                dataset/img6.jpg    Facenet            mtcnn     True   \n",
+       "0   106        ../unit/dataset/img1.jpg    Facenet            mtcnn     True   \n",
+       "29  137    dataset/img11_reflection.jpg    Facenet            mtcnn     True   \n",
+       "50  158                dataset/img4.jpg    Facenet            mtcnn     True   \n",
+       "\n",
+       "    l2_normalized  distance  \n",
+       "54          False  0.157526  \n",
+       "31          False  0.199807  \n",
+       "59          False  0.203507  \n",
+       "49          False  0.207596  \n",
+       "53          False  0.211547  \n",
+       "0           False  0.236827  \n",
+       "29          False  0.244111  \n",
+       "50          False  0.248995  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "111bcd2e",
    "metadata": {},
    "source": [
@@ -60,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8d94a2c1",
    "metadata": {},
    "outputs": [],
@@ -76,39 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2deb2f55",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(database_items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d2ff85c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 64/64 [03:56<00:00,  3.70s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for img_path in tqdm(database_items):\n",
     "    _ = DeepFace.register(\n",
@@ -118,6 +316,38 @@
     "        connection=conn,\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f9c1d6",
+   "metadata": {},
+   "source": [
+    "### Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a370cf6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a17f0ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e1f10bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
