build index added

--- a/tests/unit/db.ipynb
+++ b/tests/unit/db.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7de3420f",
    "metadata": {},
    "outputs": [],
@@ -75,194 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "91c8d192",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(dfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "53ef7336",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 7)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "68802ce5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>img_name</th>\n",
-       "      <th>model_name</th>\n",
-       "      <th>detector_backend</th>\n",
-       "      <th>aligned</th>\n",
-       "      <th>l2_normalized</th>\n",
-       "      <th>distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>162</td>\n",
-       "      <td>dataset/img7.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.157526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>139</td>\n",
-       "      <td>dataset/selfie-many-people.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.199807</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>167</td>\n",
-       "      <td>dataset/img2.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.203507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>157</td>\n",
-       "      <td>dataset/img5.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.207596</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>161</td>\n",
-       "      <td>dataset/img6.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.211547</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>106</td>\n",
-       "      <td>../unit/dataset/img1.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.236827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>137</td>\n",
-       "      <td>dataset/img11_reflection.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.244111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>158</td>\n",
-       "      <td>dataset/img4.jpg</td>\n",
-       "      <td>Facenet</td>\n",
-       "      <td>mtcnn</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.248995</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     id                        img_name model_name detector_backend  aligned  \\\n",
-       "54  162                dataset/img7.jpg    Facenet            mtcnn     True   \n",
-       "31  139  dataset/selfie-many-people.jpg    Facenet            mtcnn     True   \n",
-       "59  167                dataset/img2.jpg    Facenet            mtcnn     True   \n",
-       "49  157                dataset/img5.jpg    Facenet            mtcnn     True   \n",
-       "53  161                dataset/img6.jpg    Facenet            mtcnn     True   \n",
-       "0   106        ../unit/dataset/img1.jpg    Facenet            mtcnn     True   \n",
-       "29  137    dataset/img11_reflection.jpg    Facenet            mtcnn     True   \n",
-       "50  158                dataset/img4.jpg    Facenet            mtcnn     True   \n",
-       "\n",
-       "    l2_normalized  distance  \n",
-       "54          False  0.157526  \n",
-       "31          False  0.199807  \n",
-       "59          False  0.203507  \n",
-       "49          False  0.207596  \n",
-       "53          False  0.211547  \n",
-       "0           False  0.236827  \n",
-       "29          False  0.244111  \n",
-       "50          False  0.248995  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs[0]"
    ]
@@ -319,16 +155,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0f9c1d6",
+   "id": "4c5235d3",
    "metadata": {},
    "source": [
-    "### Search"
+    "## Build Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b3a20c2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25-12-24 17:37:25 - Fetched 78 embeddings from database in 0.01 seconds.\n",
+      "25-12-24 17:37:25 - Added embeddings to index in 0.00 seconds.\n",
+      "25-12-24 17:37:25 - Saved index to disk in 0.00 seconds\n",
+      "25-12-24 17:37:25 - Upserted index to database in 0.01 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "DeepFace.build_index(\n",
+    "    model_name=\"Facenet\",\n",
+    "    detector_backend=\"mtcnn\",\n",
+    "    align=True,\n",
+    "    l2_normalize=False,\n",
+    "    connection=conn,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a370cf6",
+   "id": "fee47f3d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -336,23 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a17f0ee1",
+   "id": "0877054e",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e1f10bc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab19e1a9",
-   "metadata": {},
    "source": []
   }
  ],
